设置部分页面

--- a/Beehive/Classes/Modules/Mine/Setting/LLPayPasswordResetViewController.xib
+++ b/Beehive/Classes/Modules/Mine/Setting/LLPayPasswordResetViewController.xib
@@ -1,13 +1,21 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LLPayPasswordResetViewController">
             <connections>
+                <outlet property="btnNext" destination="i0v-Lv-W4b" id="AnU-Wj-B1Z"/>
+                <outlet property="btnSendCode" destination="20b-xz-hIA" id="8IJ-uA-fnN"/>
+                <outlet property="labPhone" destination="2hp-xJ-G8J" id="ZQY-Sc-5aj"/>
+                <outlet property="passwordContView" destination="LXJ-Ed-ZpR" id="02C-gs-DgX"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -15,8 +23,77 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="138****8888" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2hp-xJ-G8J">
+                    <rect key="frame" x="101" y="58" width="173" height="36"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已发送短信验证码到手机" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gFo-OA-vC6">
+                    <rect key="frame" x="109" y="101" width="157.5" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LXJ-Ed-ZpR">
+                    <rect key="frame" x="0.0" y="148" width="375" height="50"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="dX1-Kn-8Kp"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="20b-xz-hIA">
+                    <rect key="frame" x="123.5" y="208" width="128" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="TAk-fb-xIC"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="重新获取验证码(59)">
+                        <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="sendCodeAction:" destination="-1" eventType="touchUpInside" id="Zyr-0M-QUc"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i0v-Lv-W4b">
+                    <rect key="frame" x="10" y="258" width="355" height="39"/>
+                    <color key="backgroundColor" red="1" green="0.68627450980000004" blue="0.0078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="39" id="F6c-06-LJB"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="下一步">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="3"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="nextAction:" destination="-1" eventType="touchUpInside" id="vOz-kT-Mci"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="20b-xz-hIA" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="94z-yo-49v"/>
+                <constraint firstItem="i0v-Lv-W4b" firstAttribute="top" secondItem="20b-xz-hIA" secondAttribute="bottom" constant="10" id="HjH-eI-B0I"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="i0v-Lv-W4b" secondAttribute="trailing" constant="10" id="IA8-Kg-p1S"/>
+                <constraint firstItem="LXJ-Ed-ZpR" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="MNK-hv-jqX"/>
+                <constraint firstItem="2hp-xJ-G8J" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="PSr-PE-X0K"/>
+                <constraint firstItem="gFo-OA-vC6" firstAttribute="top" secondItem="2hp-xJ-G8J" secondAttribute="bottom" constant="7" id="Pnc-BN-0jJ"/>
+                <constraint firstItem="20b-xz-hIA" firstAttribute="top" secondItem="LXJ-Ed-ZpR" secondAttribute="bottom" constant="10" id="Rhd-5o-zIv"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="LXJ-Ed-ZpR" secondAttribute="trailing" id="Syo-Py-vQI"/>
+                <constraint firstItem="i0v-Lv-W4b" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="fEi-cs-Ml2"/>
+                <constraint firstItem="2hp-xJ-G8J" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="38" id="jt2-LA-6GK"/>
+                <constraint firstItem="LXJ-Ed-ZpR" firstAttribute="top" secondItem="gFo-OA-vC6" secondAttribute="bottom" constant="30" id="rCr-KB-Z82"/>
+                <constraint firstItem="gFo-OA-vC6" firstAttribute="centerX" secondItem="2hp-xJ-G8J" secondAttribute="centerX" id="v8T-Xd-4zh"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="53.600000000000001" y="65.217391304347828"/>
         </view>
     </objects>
 </document>
