--- a/Beehive/Classes/Modules/Mine/Setting/LLAmendPhoneViewController.xib
+++ b/Beehive/Classes/Modules/Mine/Setting/LLAmendPhoneViewController.xib
@@ -12,6 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LLAmendPhoneViewController">
             <connections>
+                <outlet property="tfPhone" destination="yKe-gT-GXn" id="3fu-LP-1iZ"/>
+                <outlet property="tfSmsCode" destination="ttI-Zj-Seg" id="KbL-7Q-NMy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
