--- a/Beehive/Classes/Modules/Home/Partner/Controller/LLBeeKingViewController.xib
+++ b/Beehive/Classes/Modules/Home/Partner/Controller/LLBeeKingViewController.xib
@@ -1,13 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LLBeeKingViewController">
             <connections>
+                <outlet property="pricingHeadView" destination="lKp-Op-vi3" id="Qnh-zJ-2dc"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,5 +23,94 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
         </view>
+        <view contentMode="scaleToFill" id="lKp-Op-vi3">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="veG-AB-Fi1">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="10"/>
+                    <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="10" id="84A-nR-U8S"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V6h-hY-7wf">
+                    <rect key="frame" x="0.0" y="10" width="375" height="40"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="3_2_3.1" translatesAutoresizingMaskIntoConstraints="NO" id="vuQ-At-m0B">
+                            <rect key="frame" x="10" y="14" width="12" height="12"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="12" id="HBa-sj-Jei"/>
+                                <constraint firstAttribute="width" constant="12" id="PZj-JA-MtK"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="地址" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xky-ej-xbX">
+                            <rect key="frame" x="30" y="12" width="27" height="16"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="切换城市" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dw8-gP-DHS">
+                            <rect key="frame" x="301" y="11.5" width="48" height="17"/>
+                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                            <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_cell_right_icon" translatesAutoresizingMaskIntoConstraints="NO" id="2FB-Pd-bEb">
+                            <rect key="frame" x="354" y="14.5" width="11" height="11"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="11" id="EAa-oj-lY4"/>
+                                <constraint firstAttribute="width" constant="11" id="cvD-mL-d00"/>
+                            </constraints>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OSc-Jo-gs9">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="OSc-Jo-gs9" firstAttribute="leading" secondItem="V6h-hY-7wf" secondAttribute="leading" id="3cd-KC-bqr"/>
+                        <constraint firstAttribute="trailing" secondItem="OSc-Jo-gs9" secondAttribute="trailing" id="Hkb-nD-RBN"/>
+                        <constraint firstItem="vuQ-At-m0B" firstAttribute="leading" secondItem="V6h-hY-7wf" secondAttribute="leading" constant="10" id="IBO-HL-jxh"/>
+                        <constraint firstAttribute="bottom" secondItem="OSc-Jo-gs9" secondAttribute="bottom" id="Wrb-lu-U9H"/>
+                        <constraint firstItem="Xky-ej-xbX" firstAttribute="centerY" secondItem="vuQ-At-m0B" secondAttribute="centerY" id="Ww8-4m-una"/>
+                        <constraint firstItem="2FB-Pd-bEb" firstAttribute="centerY" secondItem="vuQ-At-m0B" secondAttribute="centerY" id="XcL-m8-nos"/>
+                        <constraint firstItem="vuQ-At-m0B" firstAttribute="centerY" secondItem="V6h-hY-7wf" secondAttribute="centerY" id="Yoe-I5-rj2"/>
+                        <constraint firstAttribute="trailing" secondItem="2FB-Pd-bEb" secondAttribute="trailing" constant="10" id="Ze3-kK-RAa"/>
+                        <constraint firstItem="2FB-Pd-bEb" firstAttribute="centerY" secondItem="dw8-gP-DHS" secondAttribute="centerY" id="aQx-2U-L00"/>
+                        <constraint firstItem="Xky-ej-xbX" firstAttribute="leading" secondItem="vuQ-At-m0B" secondAttribute="trailing" constant="8" id="dPr-Bh-DNE"/>
+                        <constraint firstItem="2FB-Pd-bEb" firstAttribute="leading" secondItem="dw8-gP-DHS" secondAttribute="trailing" constant="5" id="fI6-Id-5V3"/>
+                        <constraint firstItem="OSc-Jo-gs9" firstAttribute="top" secondItem="V6h-hY-7wf" secondAttribute="top" id="jbk-m5-grm"/>
+                        <constraint firstAttribute="height" constant="40" id="zGn-ov-BZh"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k1K-Ba-dma">
+                    <rect key="frame" x="0.0" y="50" width="375" height="10"/>
+                    <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="10" id="w5B-ZC-9uZ"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="k1K-Ba-dma" firstAttribute="trailing" secondItem="W0a-0P-50C" secondAttribute="trailing" id="NBF-mM-GEc"/>
+                <constraint firstItem="k1K-Ba-dma" firstAttribute="leading" secondItem="W0a-0P-50C" secondAttribute="leading" id="SW4-Ne-89x"/>
+                <constraint firstItem="veG-AB-Fi1" firstAttribute="top" secondItem="lKp-Op-vi3" secondAttribute="top" id="dRr-2h-dwn"/>
+                <constraint firstItem="veG-AB-Fi1" firstAttribute="leading" secondItem="W0a-0P-50C" secondAttribute="leading" id="dbm-Ha-LHU"/>
+                <constraint firstItem="V6h-hY-7wf" firstAttribute="leading" secondItem="W0a-0P-50C" secondAttribute="leading" id="dse-OI-zRC"/>
+                <constraint firstItem="V6h-hY-7wf" firstAttribute="top" secondItem="veG-AB-Fi1" secondAttribute="bottom" id="gXW-Km-Wtl"/>
+                <constraint firstItem="V6h-hY-7wf" firstAttribute="trailing" secondItem="W0a-0P-50C" secondAttribute="trailing" id="jYd-sM-QYC"/>
+                <constraint firstItem="W0a-0P-50C" firstAttribute="trailing" secondItem="veG-AB-Fi1" secondAttribute="trailing" id="ojO-eB-eMt"/>
+                <constraint firstItem="k1K-Ba-dma" firstAttribute="top" secondItem="V6h-hY-7wf" secondAttribute="bottom" id="x8E-LI-WQC"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <viewLayoutGuide key="safeArea" id="W0a-0P-50C"/>
+            <point key="canvasLocation" x="-247.19999999999999" y="127.28635682158921"/>
+        </view>
     </objects>
+    <resources>
+        <image name="3_2_3.1" width="12" height="12"/>
+        <image name="app_cell_right_icon" width="11" height="11"/>
+    </resources>
 </document>
